# moose

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  .travis_build.sh  .travis_build_linux.sh  .travis_build_osx.sh  .travis_prepare.sh  .travis_prepare_linux.sh  .travis_run.sh  CMakeLists.txt  CREDITS.md  CheckCXXCompiler.cmake  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  MooseTests.cmake  PlotWidgetContainer.py  README  README.md  SettingsDialog.py  VERSION  __init__.py  about.html  biomodelsclient.py  bootstrap  build-moose-core  build_deb.sh  build_moose-core.sh.in  build_moose_core.sh.in  build_on_travis.sh  build_rpm.sh  config.py  defaults.py  global_constants.py  loaderdialog.py  mexception.py  mgui.py  mload.py  (+12 more)
benchmarks/: CMakeLists.txt  benchmarks.cpp
biophysics/: CMakeLists.txt  CaConc.cpp  CaConc.h  CaConcBase.cpp  CaConcBase.h  ChanBase.cpp  ChanCommon.cpp  ChanCommon.h  Compartment.h  CompartmentBase.cpp  CompartmentBase.h  CompartmentDataHolder.cpp  CompartmentDataHolder.h  DifBuffer.cpp  DifBuffer.h  DifBufferBase.h  DifShell.cpp  DifShell.h  DifShellBase.cpp  DifShellBase.h  GapJunction.cpp  GapJunction.h  HHChannel.cpp  HHChannel.h  HHChannel2D.cpp  HHChannel2D.h  HHChannelBase.cpp  HHChannelBase.h  HHGate.cpp  HHGate.h  HHGate2D.cpp  HHGate2D.h  IntFire.cpp  IntFire.h  IzhikevichNrn.cpp  IzhikevichNrn.h  Leakage.cpp  Leakage.h  MMPump.cpp  MarkovChannel.cpp  (+35 more)
builtins/: Arith.cpp  Arith.h  CMakeLists.txt  Func.cpp  Func.h  Function.cpp  Function.h  Group.cpp  Group.h  HDF5DataWriter.cpp  HDF5DataWriter.h  HDF5WriterBase.cpp  HDF5WriterBase.h  InputVariable.cpp  InputVariable.h  Interpol.cpp  Interpol.h  Interpol2D.cpp  Interpol2D.h  Makefile  MooseParser.h  NSDFWriter.cpp  NSDFWriter.h  SocketStreamer.cpp  SpikeStats.h  Stats.cpp  Stats.h  StimulusTable.cpp  StimulusTable.h  Streamer.cpp  Streamer.h  StreamerBase.cpp  StreamerBase.h  Table.cpp  Table.h  TableBase.cpp  TableBase.h  TimeTable.cpp  TimeTable.h  Variable.cpp  (+2 more)
hsolve/: CMakeLists.txt  HSolve.cpp  HSolve.h  HSolveActive.cpp  HSolveActive.h  HSolvePassive.cpp  HSolveStruct.cpp  HSolveStruct.h  HSolveUtils.h  HinesMatrix.cpp  Makefile  TestHSolve.h  ZombieCaConc.h  ZombieCompartment.cpp  ZombieCompartment.h  ZombieHHChannel.cpp  testHSolve.cpp
kinetics/: BufPool.cpp  BufPool.h  CMakeLists.txt  ConcChan.cpp  CplxEnzBase.cpp  CplxEnzBase.h  Enz.cpp  Enz.h  EnzBase.cpp  EnzBase.h  MMenz.cpp  MMenz.h  Pool.cpp  Pool.h  PoolBase.cpp  PoolBase.h  Reac.cpp  Reac.h  ReacBase.cpp  ReacBase.h  ReadCspace.cpp  ReadCspace.h  ReadKkit.cpp  ReadKkit.h  Species.cpp  Species.h  WriteKkit.cpp  lookupVolumeFromMesh.cpp  lookupVolumeFromMesh.h  testKinetics.cpp  test_ksolve.py
ksolve/: BoostSys.h  CMakeLists.txt  FuncRateTerm.h  FuncTerm.cpp  FuncTerm.h  Gsolve.cpp  Gsolve.h  GssaSystem.h  GssaVoxelPools.cpp  GssaVoxelPools.h  KinSparseMatrix.cpp  KinSparseMatrix.h  Ksolve.cpp  Ksolve.h  Makefile  NonlinearSystem.h  OdeSystem.h  RateTerm.cpp  RateTerm.h  SteadyStateBoost.cpp  SteadyStateBoost.h  SteadyStateGsl.cpp  SteadyStateGsl.h  Stoich.cpp  Stoich.h  VoxelPools.cpp  VoxelPools.h  VoxelPoolsBase.cpp  VoxelPoolsBase.h  XferInfo.h  ZombieBufPool.cpp  ZombieBufPool.h  ZombieEnz.cpp  ZombieEnz.h  ZombieFunction.cpp  ZombieFunction.h  ZombieMMenz.cpp  ZombieMMenz.h  ZombiePool.cpp  ZombiePool.h  (+5 more)
mesh/: Boundary.h  CMakeLists.txt  ChemCompt.cpp  ChemCompt.h  CubeMesh.cpp  CubeMesh.h  CylBase.cpp  CylMesh.cpp  EndoMesh.cpp  Makefile  MeshCompt.cpp  MeshCompt.h  MeshEntry.cpp  NeuroMesh.cpp  NeuroMesh.h  NeuroNode.cpp  NeuroNode.h  PsdMesh.cpp  SpineEntry.cpp  SpineEntry.h  SpineMesh.cpp  SpineMesh.h  Stencil.cpp  Stencil.h  VoxelJunction.h  origMakefile  testMesh.cpp
moose-core/: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHROS  CMakeLists.txt  CONTRIBUTING.md  CheckCXXCompiler.cmake  CheckMooseCompiler.cmake  INSTALL.md  Jenkinsfile  MANIFEST.in  Makefile  MooseTests.cmake  README.md  VERSION  cmake_moose_cpack.cmake  cmake_uninstall.cmake.in  setup.py
moose-core/.ci/: Dockerfile  coverage.sh  deploy_pypi.sh  run_pylint.sh  travis_build_linux.sh  travis_build_osx.sh
moose-core/.travis/: travis_build_linux.sh  travis_build_osx.sh  travis_prepare_linux.sh  travis_prepare_osx.sh
moose-core/basecode/: CMakeLists.txt  Cinfo.cpp  Cinfo.h  Conv.h  DataElement.cpp  DataElement.h  DestFinfo.cpp  Dinfo.h  Element.cpp  Element.h  ElementValueFinfo.h  EpFunc.cpp  EpFunc.h  Eref.h  FieldElement.cpp  FieldElementFinfo.cpp  FuncOrder.h  GlobalDataElement.cpp  GlobalDataElement.h  HopFunc.cpp  HopFunc.h  Id.h  LocalDataElement.h  LookupElementValueFinfo.h  LookupValueFinfo.h  Makefile  MsgDigest.h  MsgElement.h  ObjId.cpp  ObjId.h  OpFunc.h  OpFuncBase.cpp  OpFuncBase.h  PrepackedBuffer.cpp  PrepackedBuffer.h  ProcInfo.h  ProcOpFunc.h  SetGet.cpp  SetGet.h  SharedFinfo.cpp  (+13 more)
moose-core/benchmarks/: CMakeLists.txt  Makefile  kineticMarks.cpp
moose-core/biophysics/: CMakeLists.txt  CaConc.cpp  CaConcBase.cpp  CaConcBase.h  ChanBase.cpp  ChanBase.h  ChanCommon.cpp  ChanCommon.h  Compartment.cpp  Compartment.h  CompartmentBase.cpp  CompartmentDataHolder.cpp  HHGate.h  (+61 more)
moose-examples/: .gitignore  .travis.yml  CMakeLists.txt  README.md  run.sh.in
pymoose/: CMakeLists.txt  PyRun.cpp  PyRun.h  melement.cpp  mfield.cpp  moosemodule.cpp  moosemodule.h  pymooseinit.cpp  test_moosemodule.cpp  vec.cpp
scheduling/: CMakeLists.txt  Clock.cpp  Makefile  testScheduling.cpp  testScheduling.h
synapse/: CMakeLists.txt  GraupnerBrunel2012CaPlasticitySynHandler.cpp  GraupnerBrunel2012CaPlasticitySynHandler.h  Makefile  RollingMatrix.cpp  RollingMatrix.h  STDPSynHandler.cpp  SeqSynHandler.cpp  SeqSynHandler.h  SimpleSynHandler.cpp  SimpleSynHandler.h  SynHandlerBase.cpp  SynHandlerBase.h  Synapse.cpp  testSynapse.cpp
utility/: Annotator.cpp  Annotator.h  CMakeLists.txt  Vec.cpp  Vec.h  cnpy.cpp  cnpy.hpp  matrix_util.cpp  matrix_util.h  numutil.cpp  numutil.h  print_function.hpp  setupenv.cpp  simple_assert.hpp  simple_logger.hpp  strutil.cpp  strutil.h  testing_macros.hpp  types.cpp  utility.cpp  utility.h
(+2315 files in other folders)
